2008-02-27  Dave Brolley  <brolley@redhat.com>

	PR5189
	* staptree.h (print_format::conv_memory): New enumerator.
	(print_format::width_type): New enumeration.
	(print_format::precision_type): New enumeration.
	(format_component::widthtype): New member.
	(format_component::prectype): New member.
	(format_component::is_empty): Test widthtype and prectype.
	(format_component::clear): Clear widthtype and prectype.
	* staptree.cxx (print_format::components_to_string): Handle dynamic width and precision.
	Handle conv_memory.
	(print_format::string_to_components): Parse dynamic width and precision specifiers.
	Set widthtype and prectype. Parse %m format specifier.
	* elaborate.h (typeresolution_info::check_arg_type): New method.
	* elaborate.cxx (typeresolution_info::visit_print_format): Account for dynamic width
	and precision when computing the expected number of arguments. Check the types of
	arguments for dynamic width and precision. Use check_arg_type to check the types of
	all arguments. Handle print_format::conv_memory.
	(typeresolution_info::check_arg_type): New method.
	* NEWS: Describe the enhancements above.

2008-02-27  David Smith  <dsmith@redhat.com>

	PR5729
	* systemtap.spec.in: Adds examples to the testsuite rpm so that
	systemtap.samples/examples.exp works correctly.

2008-02-26  Dave Brolley  <brolley@redhat.com>

	PR5018
	* staprun.8.in: Escape dashes ('-') as appropriate.

2008-02-26  Srinivasa DS   <srinivasa@in.ibm.com>
	PR5772
	* tapset/syscall2.stp: Modify wait4,waitid argument list
	for kernel > 2.6.24.

2008-02-25  Frank Ch. Eigler  <fche@elastic.org>

	PR5792.
	* parse.cxx (eval_pp_conditional): Support wildcards in 
	%( kernel_v/kernel_vr/arch ==/!= "*foo?" %) operands.
	* NEWS, stap.1.in: Document this.

2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	PR5787, PR2608, .statement()
	* tapsets.cxx (query_dwarf_func): Process .statement(NUM) probes too.
	(query_cu): Ditto.