@@ -1,3 +1,11 @@
+2008-02-27  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR5697
+	* configure.ac (enable-docs): Implement.
+	* systemtap.spec.in: Add optional docs build/install/prereqs.
+	* Makefile.am (SUBDIRS): Add doc.
+	* Makefile.in, configure: Regenerated.
+
 2008-02-27  Dave Brolley  <brolley@redhat.com>
 
 	PR5189
